AM_CFLAGS = -O2 -g -Wall -Wextra -pedantic -std=c99
AM_CXXFLAGS = -O2 -g -Wall -Wextra -pedantic -std=c++11
AM_LDFLAGS = -pthread

sbin_PROGRAMS = usbmondump usbmonapi
usbmondump_SOURCES = usbmon-dump.c usbmon-dump.h
usbmonapi_SOURCES = usbmon-api.cpp usbmon.cpp usbpacket.cpp usbmon.hpp usbmonpacket.hpp
